added model, metrics and .py changes for random forest

--- a/src/expt.ipynb
+++ b/src/expt.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "c12bba79",
+   "execution_count": 58,
+   "id": "9abf12d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,7 @@
     "import dvc.api\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import tree, metrics\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "import pickle\n",
     "import json"
    ]
@@ -20,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4efe8621",
+   "id": "41c64073",
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "981c7850",
+   "id": "5b41ec45",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f12b6261",
+   "id": "58365907",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "d7514338",
+   "id": "bf284b57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,21 +285,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "598e90d3",
+   "execution_count": 59,
+   "id": "7b409792",
    "metadata": {},
    "outputs": [],
    "source": [
     "# training and prediction step\n",
-    "clf = tree.DecisionTreeClassifier(criterion = \"entropy\")\n",
+    "\n",
+    "# clf = tree.DecisionTreeClassifier(criterion = \"entropy\")\n",
+    "# clf = clf.fit(X_train, y_train)\n",
+    "# y_pred = clf.predict(X_test)\n",
+    "\n",
+    "clf = RandomForestClassifier(n_estimators=100, criterion = \"entropy\")\n",
     "clf = clf.fit(X_train, y_train)\n",
     "y_pred = clf.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "8667f586",
+   "execution_count": 60,
+   "id": "194ac699",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,16 +315,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "f946b391",
-   "metadata": {},
+   "execution_count": 61,
+   "id": "0563119e",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9993153330290369\n",
-      "Weighted F1 Score: 0.9993204848047905\n"
+      "Accuracy: 0.9996137776061234\n",
+      "Weighted F1 Score: 0.999596639330722\n"
      ]
     }
    ],
@@ -331,8 +339,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "003b302c",
+   "execution_count": 62,
+   "id": "2ad96a52",
    "metadata": {},
    "outputs": [],
    "source": [
